<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="@dimen/spinner_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_default">
        </Spinner>

        <LinearLayout
            android:id="@+id/ll_from"
            android:layout_below="@+id/spinner_from"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_show_type_from"
                android:text="@string/tv_show_type_from_default"
                android:textStyle="bold"
                android:layout_width="@dimen/tv_show_type_width"
                android:textSize="@dimen/large_text_size"
                android:layout_height="wrap_content">
            </TextView>

            <EditText
                android:id="@+id/et_input_number"
                android:layout_weight="1"
                android:imeActionLabel="Go"
                android:textSize="@dimen/large_text_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_input_number"
                android:autofillHints="@string/hint_input_number"
                android:inputType="text">
            </EditText>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_baseline_delete_forever_24"
                    android:layout_height="40dp">
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>


    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_to_one"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_show_type_to_one"
                    android:text="@string/tv_show_type_to_one_default"
                    android:textStyle="bold"
                    android:layout_width="@dimen/tv_show_type_width"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/tv_result_one"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_to_two"
                android:layout_below="@+id/ll_to_one"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_show_type_to_two"
                    android:text="@string/tv_show_type_to_two_default"
                    android:textStyle="bold"
                    android:layout_width="@dimen/tv_show_type_width"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/tv_result_two"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_to_three"
                android:layout_below="@+id/ll_to_two"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginHorizontal="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_show_type_to_three"
                    android:text="@string/tv_show_type_to_three_default"
                    android:textStyle="bold"
                    android:layout_width="@dimen/tv_show_type_width"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/tv_result_three"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/large_text_size"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_convert"
        android:layout_marginBottom="@dimen/margin_convert_button_bottom"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_alignParentBottom="true"
        android:text="@string/button_convert"
        android:padding="@dimen/button_convert_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </Button>
</LinearLayout>